@@ -1,11 +1,16 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 4,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2022-11-27T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-12-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
