@@ -1,3 +1,11 @@
+2022-12-04T00:54:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3610987536 # 672
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 142 / 55 145
+* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 56 146
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-12-03]
+
 2022-12-02T16:13:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3603282733 # 668
 * notice: last 14d: unq all: 2 3
